# task-1-rmt

./: .gitignore  INCLUDE.md  README.md  TODO  docker-compose.yaml  justfile  main.py  pyproject.toml  scripts.py  seed.py
dags/: pipe_generate_campaigns_dimension.py  pipe_generate_daily_clicks.py  pipe_generate_daily_impressions.py  pipe_generate_fact_clicks.py  pipe_generate_fact_impressions.py  pipe_generate_time_dimension.py
docs/: AnalyzeSchemas.ipynb  TestClickHouseCapabilities.ipynb
migrations_analytics/: V1__create_schema.sql
migrations_analytics/conf/: flyway.conf
